updated website files

--- a/about.html
+++ b/about.html
@@ -1,18 +1,27 @@
 <!DOCTYPE html>
 <html lang="eng">
-    <head>
-        <title>Services</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="ind.css">
-        <link rel="stylesheet" href="services.css">
-    </head>
-    <body>
-        <div class="header">
-            <span class="navbar" id="home"><a href="index.html">Home</a></span>
-            <span class="navbar" id="about"><a href="about.html">About</a></span>
-            <span class="navbar" id="contact"><a href="contact.html">Contact</a></span>
-            <span class="navbar" id="services"><a href="services.html">Services</a></span>
-            <span class="navbar" id="register"><a href="Register.html">Register</a></span>
-        </div>
-    </body>
+  <head>
+    <title>Services</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="ind.css" />
+    <link rel="stylesheet" href="services.css" />
+  </head>
+  <body>
+    <div class="header">
+      <span class="navbar" id="barc"
+        ><a href="index.html"><img src="marvel_logo.png" alt="BARC" /></a
+      ></span>
+      <span class="navbar" id="home"><a href="index.html">Home</a></span>
+      <span class="navbar" id="about"><a href="about.html">About</a></span>
+      <span class="navbar" id="contact"
+        ><a href="contact.html">Contact</a></span
+      >
+      <span class="navbar" id="services"
+        ><a href="services.html">Services</a></span
+      >
+      <span class="navbar" id="register"
+        ><a href="Register.html">Register</a></span
+      >
+    </div>
+  </body>
 </html>
