--- a/index.html
+++ b/index.html
@@ -1,19 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Assignment</title>
-        <link rel="stylesheet" href="ind.css">
-    </head>
-    <body>
-        <div class="header">
-            <span class="navbar" id="home"><a href="index.html">Home</a></span>
-            <span class="navbar" id="about"><a href="about.html">About</a></span>
-            <span class="navbar" id="contact"><a href="contact.html">Contact</a></span>
-            <span class="navbar" id="services"><a href="services.html">Services</a></span>
-            <span class="navbar" id="register"><a href="Register.html">Register</a></span>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Assignment</title>
+    <link rel="stylesheet" href="ind.css" />
+  </head>
 
-    </body>
+  <body>
+    <div class="header">
+      <span class="navbar" id="barc"
+        ><a href="index.html"><img src="marvel_logo.png" alt="BARC" /></a
+      ></span>
+      <span class="navbar" id="home"><a href="index.html">Home</a></span>
+      <span class="navbar" id="about"><a href="about.html">About</a></span>
+      <span class="navbar" id="contact"
+        ><a href="contact.html">Contact</a></span
+      >
+      <span class="navbar" id="services"
+        ><a href="services.html">Services</a></span
+      >
+      <span class="navbar" id="register"
+        ><a href="Register.html">Register</a></span
+      >
+    </div>
+    <div class="super_heroes">
+      <div id="iron">
+        <a href="services.html#iron-man" target="_self">
+          <img src="ironman.png" alt="Iron Man" />
+        </a>
+      </div>
+      <div id="cap">
+        <a href="services.html#captain-america" target="_self">
+          <img src="captain_america.png" alt="Captain America" />
+        </a>
+      </div>
+      <div id="pant">
+        <a href="services.html#black-panther" target="_self">
+          <img src="black_panther.png" alt="Black Panther" />
+        </a>
+      </div>
+      <div id="thor">
+        <a href="services.html#thor" target="_self">
+          <img src="thor.png" alt="Thor" />
+        </a>
+      </div>
+      <div id="hulk">
+        <a href="services.html#hulk" target="_self">
+          <img src="hulk.png" alt="Hulk" />
+        </a>
+      </div>
+      <div id="spidy">
+        <a href="services.html#spider-man" target="_self">
+          <img src="spiderman.png" alt="spiderman" />
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
