--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
   <head>
-    <title>Services</title>
+    <title>Contact</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="ind.css" />
     <link rel="stylesheet" href="contact.css" />
@@ -9,7 +9,8 @@
   <body>
     <div class="header">
       <span class="navbar" id="barc"
-        ><a href="index.html"><img src="marvel_logo.png" alt="BARC" /></a
+        ><a href="index.html"
+          ><img src="/logos/marvel_logo.png" alt="MARVEL" /></a
       ></span>
       <span class="navbar" id="home"><a href="index.html">Home</a></span>
       <span class="navbar" id="about"><a href="about.html">About</a></span>
@@ -23,42 +24,55 @@
         ><a href="Register.html">Register</a></span
       >
     </div>
-    <div class="form">
-      <form action="contact.php" method="post">
-        <label for="name">Name:</label>
-        <input
-          class="input"
-          type="text"
-          placeholder="full name"
-          name="name"
-          required
-        />
-        <br />
-        <label for="email">Email:</label>
-        <input
-          class="input"
-          type="email"
-          placeholder="abc@gmail.com"
-          name="email"
-          required
-        />
-        <br />
-        <div class="para">
-          <label for="query">Concern:</label>
-          <textarea
-            placehoder="Enter your query"
-            id="q"
-            rows="5"
-            cols="30"
-          ></textarea>
-          <br />
+    <div class="bodd">
+      <div class="all">
+        <div class="form">
+          <form action="contact.php" method="post">
+            <span class="imp">*<label for="name">Name:</label></span
+            ><br />
+            <input
+              class="input"
+              type="text"
+              placeholder="full name"
+              name="name"
+              required
+            />
+            <br />
+            <span class="imp">*<label for="email">Email:</label></span
+            ><br />
+            <input
+              class="input"
+              type="email"
+              placeholder="abc@gmail.com"
+              name="email"
+              required
+            />
+            <br />
+            <div class="para">
+              <span class="imp">*<label for="query">Concern:</label></span
+              ><br />
+              <textarea
+                placehoder="Enter your query"
+                id="q"
+                rows="5"
+                cols="30"
+              ></textarea>
+              <br />
+            </div>
+            <div class="file">
+              <span class="imp"
+                >*<label for="myfile">Select a file:</label></span
+              >
+              <input type="file" id="myfile" name="myfile" />
+            </div>
+            <span class="bton">
+              <button class="submit" type="submit" id="btn" name="submit">
+                Submit
+              </button></span
+            >
+          </form>
         </div>
-        <div class="file">
-          <label for="myfile">Select a file:</label>
-          <input type="file" id="myfile" name="myfile" />
-        </div>
-        <button type="submit" id="btn" name="submit">Submit</button>
-      </form>
+      </div>
     </div>
   </body>
 </html>
