--- a/index.html
+++ b/index.html
@@ -8,51 +8,65 @@
   </head>
 
   <body>
-    <div class="header">
-      <span class="navbar" id="barc"
-        ><a href="index.html"><img src="marvel_logo.png" alt="BARC" /></a
-      ></span>
-      <span class="navbar" id="home"><a href="index.html">Home</a></span>
-      <span class="navbar" id="about"><a href="about.html">About</a></span>
-      <span class="navbar" id="contact"
-        ><a href="contact.html">Contact</a></span
+    <div class="nav">
+      <div class="logo">
+        <span class="op active"><img src="logos/open.png" alt="open" /></span>
+        <span class="op"><img src="logos/close.png" alt="close" /></span>
+      </div>
+      <div class="header">
+        <span class="navbar" id="barc"
+          ><a href="index.html"
+            ><img src="/logos/marvel_logo.png" alt="MARVEL" /></a
+        ></span>
+        <span class="navbar" id="home"><a href="index.html">Home</a></span>
+        <span class="navbar" id="about"><a href="about.html">About</a></span>
+        <span class="navbar" id="contact"
+          ><a href="contact.html">Contact</a></span
+        >
+        <span class="navbar" id="services"
+          ><a href="services.html">Services</a></span
+        >
+        <span class="navbar" id="register"
+          ><a href="Register.html">Register</a></span
+        >
+      </div>
+    </div>
+    <div class="hero-info">
+      <span
+        >If you want to know about the superheroes shown below click on
+        them</span
       >
-      <span class="navbar" id="services"
-        ><a href="services.html">Services</a></span
-      >
-      <span class="navbar" id="register"
-        ><a href="Register.html">Register</a></span
-      >
+      <hr />
     </div>
     <div class="super_heroes">
       <div id="iron">
-        <a href="services.html#iron-man" target="_self">
-          <img src="ironman.png" alt="Iron Man" />
+        <a href="about.html#iron-man" target="_self">
+          <img src="/logos/ironman.png" alt="Iron Man" />
         </a>
       </div>
       <div id="cap">
-        <a href="services.html#captain-america" target="_self">
-          <img src="captain_america.png" alt="Captain America" />
+        <a href="about.html#captain-america" target="_self">
+          <img src="/logos/captain_america.png" alt="Captain America" />
         </a>
       </div>
       <div id="pant">
-        <a href="services.html#black-panther" target="_self">
-          <img src="black_panther.png" alt="Black Panther" />
+        <a href="about.html#black-panther" target="_self">
+          <img src="/logos/black_panther.png" alt="Black Panther" />
         </a>
       </div>
       <div id="thor">
-        <a href="services.html#thor" target="_self">
-          <img src="thor.png" alt="Thor" />
+        <a href="about.html#thor" target="_self">
+          <img src="/logos/thor.png" alt="Thor" />
         </a>
       </div>
       <div id="hulk">
-        <a href="services.html#hulk" target="_self">
-          <img src="hulk.png" alt="Hulk" />
+        <a href="about.html#hulk" target="_self">
+          <img src="/logos/hulk.png" alt="Hulk" />
         </a>
       </div>
       <div id="spidy">
-        <a href="services.html#spider-man" target="_self">
-          <img src="spiderman.png" alt="spiderman" />
+        <a href="about.html#spider-man" target="_self">
+          <img src="/logos/spiderman.png" alt="spiderman" />
         </a>
       </div>
     </div>
