--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
   <body>
     <div class="nav">
-      <div class="logo">
+      <!-- <div class="logo">
         <span class="op active"><img src="logos/open.png" alt="open" /></span>
         <span class="op"><img src="logos/close.png" alt="close" /></span>
-      </div>
+      </div> -->
       <div class="header">
         <span class="navbar" id="barc"
           ><a href="index.html"
