--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="header">
         <span class="navbar" id="barc"
           ><a href="index.html"
-            ><img src="/logos/marvel_logo.png" alt="MARVEL" /></a
+            ><img src="logos/marvel_logo.png" alt="MARVEL" /></a
         ></span>
         <span class="navbar" id="home"><a href="index.html">Home</a></span>
         <span class="navbar" id="about"><a href="about.html">About</a></span>
@@ -41,32 +41,32 @@
     <div class="super_heroes">
       <div id="iron">
         <a href="about.html#iron-man" target="_self">
-          <img src="/logos/ironman.png" alt="Iron Man" />
+          <img src="logos/ironman.png" alt="Iron Man" />
         </a>
       </div>
       <div id="cap">
         <a href="about.html#captain-america" target="_self">
-          <img src="/logos/captain_america.png" alt="Captain America" />
+          <img src="logos/captain_america.png" alt="Captain America" />
         </a>
       </div>
       <div id="pant">
         <a href="about.html#black-panther" target="_self">
-          <img src="/logos/black_panther.png" alt="Black Panther" />
+          <img src="logos/black_panther.png" alt="Black Panther" />
         </a>
       </div>
       <div id="thor">
         <a href="about.html#thor" target="_self">
-          <img src="/logos/thor.png" alt="Thor" />
+          <img src="logos/thor.png" alt="Thor" />
         </a>
       </div>
       <div id="hulk">
         <a href="about.html#hulk" target="_self">
-          <img src="/logos/hulk.png" alt="Hulk" />
+          <img src="logos/hulk.png" alt="Hulk" />
         </a>
       </div>
       <div id="spidy">
         <a href="about.html#spider-man" target="_self">
-          <img src="/logos/spiderman.png" alt="spiderman" />
+          <img src="logos/spiderman.png" alt="spiderman" />
         </a>
       </div>
     </div>
