--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <div class="header">
       <span class="navbar" id="barc"
         ><a href="index.html"
-          ><img src="/logos/marvel_logo.png" alt="MARVEL" /></a
+          ><img src="logos/marvel_logo.png" alt="MARVEL" /></a
       ></span>
       <span class="navbar" id="home"><a href="index.html">Home</a></span>
       <span class="navbar" id="about"><a href="about.html">About</a></span>
